syntax = "proto3";

option java_multiple_files = true;

package org.apache.dubbo.sample.tri;


// The request message containing the user's name.
message GreeterRequest {
  string name = 1;
}

// The response message containing the greetings
message GreeterReply {
  string message = 1;
}

service PbGreeter{
  rpc UpperGreet(GreeterRequest) returns (GreeterReply);

  rpc Greet(GreeterRequest) returns (GreeterReply);

  rpc GreetWithAttachment (GreeterRequest) returns (GreeterReply);

  rpc GreetException(GreeterRequest) returns (GreeterReply);

  rpc GreetStream(stream GreeterRequest) returns (stream GreeterReply);

  rpc GreetServerStream(GreeterRequest) returns (stream GreeterReply);
}
